Fixed items overflowing on dashboard

--- a/projects/admin-dashboard/style.css
+++ b/projects/admin-dashboard/style.css
@@ -230,6 +230,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
 .notifications {
   width: 1em;
@@ -296,7 +298,7 @@ body {
   grid-template-columns: 2fr 1fr;
   grid-template-rows: min-content;
   padding: 1em;
-  height: 100%;
+  flex: 1;
   background-color: oklch(87.2% 0.01 258.338);
 }
 .dashboard > p {
